# board

./: .clang-format  README.md  main.cpp  manager.cpp  manager.hpp  meson.build  window.cpp  window.hpp
subprojects/: sdl2.wrap
